packages/svelte/tests/validator/samples/ts-unsupported-namespace/input.svelte
<script module lang="ts">
	namespace SomeNamespace {
		export const foo = true;
	}
</script>
