packages/svelte/tests/compiler-errors/samples/store-autosub-context-module/main.svelte
<script context="module">
	const foo = {};
	const answer = $foo;
</script>

<p>{answer}</p>